--- a/_/components/sass/styles.scss
+++ b/_/components/sass/styles.scss
@@ -130,6 +130,12 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
     transition: color .25s ease-in-out;
   }
 }
+/*---------General Styles---*/
+.relativePosition {
+  position: relative;
+}
+
+
 /*---Start Nav functions--*/
 
   .main-header {
@@ -317,7 +323,14 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
         height:7px;
         width: 0;
       }
-
+      .audioVideoMenuButton {
+        width: 7%;
+        position: absolute;
+        left: 50%;
+        cursor: pointer;
+        bottom: -3%;
+        z-index: 10;
+      }
     }
     #sectionTwo {
       position: relative;
@@ -373,7 +386,7 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
           float: left;
           margin: -5% 0 0 35%;
           width: 100%;
-          height: 100vh;
+          height: 400px;
         }
         .homePageTwoBulletLines {
           width: 100%;
@@ -396,8 +409,8 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
           display: block;
           z-index: 250;
           height: auto;
-          top: -4%;
-          left: 5%;
+          top: -30px;
+          left: 60px;
         }
         .homePageTwoSmallHeaderHexTwo {
           width: 100%;
@@ -406,8 +419,8 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
         }
         :nth-child(3) div:nth-child(3) {
           position: absolute;
-          top: 16.5%;
-          left: 5%;
+          top: 145px;
+          left: 60px;
           z-index: 260;
           height: auto;
         }
@@ -418,8 +431,8 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
         }
         :nth-child(3) div:nth-child(4) {
           position: absolute;
-          top: 36%;
-          left: 5%;
+          top: 320px;
+          left: 60px;
           z-index: 270;
           height: auto;
         }
@@ -439,8 +452,8 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
           position: absolute;
           z-index: 280;
           height: auto;
-          left: 13%;
-          top: -2%;
+          left: 150px;
+          top: -15px;
         }
         .homePageTwoH3Two {
           height: auto;
@@ -451,8 +464,8 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
           z-index: 290;
           width: 100%;
           height: auto;
-          top: 18%;
-          left: 13%;
+          top: 163px;
+          left: 150px;
         }
         .homePageTwoH3Three {
           height: auto;
@@ -463,8 +476,8 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
           z-index: 300;
           width: 100%;
           height: auto;
-          top: 38%;
-          left: 13%;
+          top: 340px;
+          left: 150px;
         }
 
       } // end sectionTwoAnimations
