This is the 5th commit. I worked on cleaning up some of the UI interaction for the music on /#page1 and sliced up my SCSS files into smaller pieces to help maintain them better.

--- a/_/components/sass/styles.scss
+++ b/_/components/sass/styles.scss
@@ -5,234 +5,20 @@ date Created = 9-9-2015
 last Mod = 9-15-2015
 */
 
-/* http://meyerweb.com/eric/tools/css/reset/ 
-   v2.0 | 20110126
-   License: none (public domain);
-*/
 
-html, body, div, span, applet, object, iframe,
-h1, h2, h3, h4, h5, h6, p, blockquote, pre,
-a, abbr, acronym, address, big, cite, code,
-del, dfn, em, img, ins, kbd, q, s, samp,
-small, strike, strong, sub, sup, tt, var,
-b, u, i, center,
-dl, dt, dd, ol, ul, li,
-fieldset, form, label, legend,
-table, caption, tbody, tfoot, thead, tr, th, td,
-article, aside, canvas, details, embed, 
-figure, figcaption, footer, header, hgroup, 
-menu, nav, output, ruby, section, summary,
-time, mark, audio, video {
-    margin: 0;
-    padding: 0;
-    border: 0;
-    font-size: 100%;
-    font: inherit;
-    vertical-align: baseline;
-}
-/* HTML5 display-role reset for older browsers */
-article, aside, details, figcaption, figure, 
-footer, header, hgroup, menu, nav, section {
-    display: block;
-}
-body {
-    line-height: 1;
-}
-ol, ul {
-    list-style: none;
-}
-blockquote, q {
-    quotes: none;
-}
-blockquote:before, blockquote:after,
-q:before, q:after {
-    content: '';
-    content: none;
-}
-table {
-    border-collapse: collapse;
-    border-spacing: 0;
-}
+/*----import SCSS files----*/
+@import 'reset';
+@import 'generalAndFonts';
+@import 'menu';
+@import 'sectionOne';
+@import 'sectionTwo';
+@import 'sectionThree';
 
 // This is for the site menu 
 @import "compass/css3";
-// General Styles 
-* {
-  box-sizing: border-box;
-}
-
-html, body { min-height: 100%; }
-a { text-decoration: none; }
-
-.displayFlex {
-  display: flex;
-}
-.floatLeft {
-    float: left;
-}
-.clearBoth {
-    clear: both;
-}
-.menuButton  {
-  display: block;
-  padding: 1em;
-  text-align: center;
-
-}
-/*------start Fonts----*/
-@font-face {
-    font-family: josefinRegular;
-    src: url('../_/fonts/josefin_regular.ttf');
-}
-@font-face {
-    font-family: josefinBold;
-    src: url('../_/fonts/josefin_bold.ttf');
-    font-weight: bold;
-}
-@font-face {
-  font-family: fontawesome;
-  src: url('../_/fonts/font-awesome.min.css');
-}
-$font-stack: josefinRegular, Arial, Helvetica, sans-serf;
-/*---------font-awesome----*/
-.audioVideoControls {
-  .fa-play:hover {
-    color: rgba(0,0,0,1);
-  }
-  .fa-play:before {
-    font-size: 1.5em;
-    color: #fff;
-    cursor: pointer;
-    //-webkit-transition: color .25s ease-in-out;
-    //-moz-transition: color .25s ease-in-out;
-    //-ms-transition: color .25s ease-in-out;
-    //-o-transition: color .25s ease-in-out;
-    //transition: color .25s ease-in-out;
-  }
-  .fa-pause:before {
-    font-size: 1.5em;
-    color: #fff;
-    cursor: pointer;
-    -webkit-transition: color .25s ease-in-out;
-    -moz-transition: color .25s ease-in-out;
-    -ms-transition: color .25s ease-in-out;
-    -o-transition: color .25s ease-in-out;
-    transition: color .25s ease-in-out;
-  }
-  .fa-stop:before {
-    font-size: 1.5em;
-    color: #fff;
-    cursor: pointer;
-    -webkit-transition: color .25s ease-in-out;
-    -moz-transition: color .25s ease-in-out;
-    -ms-transition: color .25s ease-in-out;
-    -o-transition: color .25s ease-in-out;
-    transition: color .25s ease-in-out;
-  }
-}
-/*---------General Styles---*/
-.relativePosition {
-  position: relative;
-}
 
 
-/*---Start Nav functions--*/
 
-  .main-header {
-    /* background: linear-gradient(#3F94BF, #246485); */
-    padding: 5px;
-    text-align: center;
-    color: white;
-    text-shadow: #222 0px -1px 1px;
-    position: fixed;
-    width: 100%;
-    left: 0;
-    transition: all 1s ease;
-    z-index:  100;
-    a {
-      position: absolute;
-      left: 95%;
-      top: 20px;
-      color: white;
-      font-size: 32px;
-    }
-  }
-
-  .page-wrap {
-    float: right;
-    width: 100%;
-    transition: width 1s ease;
-  }
-
-  .hiddenContent {
-    position: fixed;
-    top: 0;
-    width: 0;
-    height: 100%;
-    background: #353535;
-    overflow-y: auto;
-    transition: width 1s ease;
-    z-index: 99;
-    a {
-      display: block;
-      color: white;
-      padding: 1em;
-      &:hover, &:focus {
-
-      }
-    }
-    .displayFlex > div {
-      width: 30%;
-      margin: 2% auto;
-      display: block;
-      position: relative;
-    }
-    :last-child {
-      margin: 0 5% 0 0;
-    }
-    .icon {
-      display: block;
-      margin: 0 auto;
-    }
-    .portfolioMenuIconTwo {
-      position: absolute;
-      left: 28%;
-      top: 0;
-    }
-    h2 {
-      color: #fff;
-      font-size: 2em;
-      text-align: center;
-      margin: 2%;
-    }
-    p {
-      color: white;
-      padding: 4%;
-      font-size: 1.25em;
-    }
-  } // end hiddenContent
-
-
-  .close-menu {
-    display: none;
-  }
-
-  #hiddenContent:target {
-    width: 100%;
-  }
-  #hiddenContent:target + .page-wrap {
-    width: 100%;
-    .open-menu {
-      display: none;
-    }
-    .close-menu {
-      display: block;
-    }
-    .main-header {
-      width: 80%;
-      left: 20%;
-    }
-  }
   /*-------button flipper styles----*/
   /* entire container, keeps perspective */
   .flip-container {
@@ -287,259 +73,8 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
       margin: 2% auto;
       text-align: center;
     }
-    #sectionOne {
-      .audioVideoControls {
-        width: 100%;
-        height: 10%;
-        position: absolute;
-        left: 0;
-        bottom: 0;
-        background: rgba(62, 59, 59, 0.45);
-        display: flex;
-        flex-direction: row;
-      }
-      .audioVideoControls > div {
-        margin: 2%;
 
-      }
-      .audioVideoControls .playButton {
 
-      }
-      .audioVideoControls p {
-        color: #ffffff;
-        padding: 1em;
-        background: rgba(0, 0, 0, 0.5);
-      }
-      .progressbarContainer {
-        background-color:#e0e0e0;
-        height: 7px;
-        width: 256px;
-        border-radius: 2px
-      }
-      .audioVideoBar {
-        -webkit-appearance: none;
-        appearance: none;
-        background-color: #1384bb;
-        height:7px;
-        width: 0;
-      }
-      .audioVideoMenuButton {
-        width: 7%;
-        position: absolute;
-        left: 50%;
-        cursor: pointer;
-        bottom: -3%;
-        z-index: 10;
-      }
-    }
-    #sectionTwo {
-      position: relative;
-      z-index: 200;
-      .sectionTwoAnimations {
-        position: relative;
-        height: 100vh;
-        width: 100%;
-        h2 {
-          font-family: $font-stack;
-          color: #555;
-          width: 100%;
-          height: auto;
-          display: block;
-          font-size: 6em;
-          opacity: 0;
-          transform: translateX(2000px);
-        }
-        :nth-child(1) {
-          position: relative;
-          height: 50vh;
-        }
-        :nth-child(1) div:nth-child(3) {
-          position: absolute;
-          left: 45%;
-          top: 45%;
-          z-index: 230;
-        }
-        .homePageTwoHexTriangle {
-          width: 100%;
-          height: auto;
-          display: block;
-        }
-        :nth-child(1) div:nth-child(2) {
-          position: absolute;
-          top: 44%;
-          left: 32%;
-          z-index: 220;
-        }
-        .homePageTwoTitleBullet {
-          width: 100%;
-          height: auto;
-          display: block;
-        }
-        :nth-child(1) div:nth-child(1) {
-          z-index: 210;
-          position: absolute;
-          top: 20%;
-          left: 5%;
-        }
-        .homePageAnimationSectionTwo {
-          position: relative;
-          float: left;
-          margin: -5% 0 0 35%;
-          width: 100%;
-          height: 400px;
-        }
-        .homePageTwoBulletLines {
-          width: 100%;
-          height: auto;
-          display: block;
 
-        }
-        :nth-child(3) div:nth-child(1) {
-          position: absolute;
-          z-index: 240;
-          height: auto;
-        }
-        .homePageTwoSmallHeaderHexOne {
-          width: 100%;
-          height: auto;
-          display: block;
-        }
-        :nth-child(3) div:nth-child(2) {
-          position: absolute;
-          display: block;
-          z-index: 250;
-          height: auto;
-          top: -30px;
-          left: 60px;
-        }
-        .homePageTwoSmallHeaderHexTwo {
-          width: 100%;
-          height: auto;
-          display: block;
-        }
-        :nth-child(3) div:nth-child(3) {
-          position: absolute;
-          top: 145px;
-          left: 60px;
-          z-index: 260;
-          height: auto;
-        }
-        .homePageTwoSmallHeaderHexThree{
-          width: 100%;
-          height: auto;
-          display: block;
-        }
-        :nth-child(3) div:nth-child(4) {
-          position: absolute;
-          top: 320px;
-          left: 60px;
-          z-index: 270;
-          height: auto;
-        }
-        h3 {
-          font-size: 3em;
-          font-family: $font-stack;
-          color: #555;
-        }
-        .homePageTwoSubTitles {
 
-        }
-        .homePageTwoH3One {
-          height: auto;
-          width: 100%;
-        }
-        :nth-child(3) div:nth-child(5) {
-          position: absolute;
-          z-index: 280;
-          height: auto;
-          left: 150px;
-          top: -15px;
-        }
-        .homePageTwoH3Two {
-          height: auto;
-          width: 100%;
-        }
-        :nth-child(3) div:nth-child(6) {
-          position: absolute;
-          z-index: 290;
-          width: 100%;
-          height: auto;
-          top: 163px;
-          left: 150px;
-        }
-        .homePageTwoH3Three {
-          height: auto;
-          width: 100%;
-        }
-        :nth-child(3) div:nth-child(7) {
-          position: absolute;
-          z-index: 300;
-          width: 100%;
-          height: auto;
-          top: 340px;
-          left: 150px;
-        }
-
-      } // end sectionTwoAnimations
-    } // end #sectionTwo
-    #sectionThree {
-      position: relative;
-      .homePageThreeImgsDiv {
-        min-width: 100%;
-        flex-direction: column;
-      }
-      h2 {
-        color: #fff;
-      }
-      // .fp-tableCell {
-      //     display: flex;
-      //     justify-content: space-around;
-      //     align-items: center;
-      // }
-      .displayFlexImgs {
-        display: flex;
-        justify-content: space-around;
-        margin: 2% auto;
-        // transform: translateX(-2000px);
-        img {
-          max-width: 100%;
-          height: auto;
-        }
-      }
-      .homePageFeaturedOne {
-        margin: 0 auto;
-        width: 100%;
-        transform: translateX(-2000px);
-      }
-      .homePageFeaturedTwo {
-        margin: 0 auto;
-        width: 100%;
-        transform: translateY(-3000px);
-      }
-      .homePageFeaturedThree {
-        margin: 0 auto;
-        width: 100%;
-        transform: translateX(-2000px);
-      }
-    } // End sectionThree
-    #sectionFour {
-      .flexParent {
-        flex-direction: column;
-        flex-wrap: wrap;
-        width: 100%;
-        div.displayFlex {
-          justify-content: space-around;
-          margin: .5em;
-          .homePageFourImg {
-            // margin: 2% auto; 
-            img {
-              width: 95%;
-              height: auto;
-              display: block;
-              margin: 2%;
-            }
-          }
-        }
-      }
-    } // End #sectionFour 
   } // End visible
