--- a/stylesheets/styles.css
+++ b/stylesheets/styles.css
@@ -4,7 +4,8 @@ file = styles.scss
 date Created = 9-9-2015
 last Mod = 9-15-2015
 */
-/* http://meyerweb.com/eric/tools/css/reset/ 
+/*----import SCSS files----*/
+/* http://meyerweb.com/eric/tools/css/reset/
    v2.0 | 20110126
    License: none (public domain);
 */
@@ -87,27 +88,8 @@ a {
   font-weight: bold; }
 @font-face {
   font-family: fontawesome;
-  src: url("../_/fonts/font-awesome.min.css"); }
+  src: url("../_/css/font-awesome.min.css"); }
 /*---------font-awesome----*/
-.audioVideoControls .fa-play:hover {
-  color: black; }
-.audioVideoControls .fa-play:before {
-  font-size: 1.5em;
-  color: #fff;
-  cursor: pointer; }
-.audioVideoControls .fa-pause:before {
-  font-size: 1.5em;
-  color: #fff;
-  cursor: pointer;
-  -webkit-transition: color .25s ease-in-out;
-  transition: color .25s ease-in-out; }
-.audioVideoControls .fa-stop:before {
-  font-size: 1.5em;
-  color: #fff;
-  cursor: pointer;
-  -webkit-transition: color .25s ease-in-out;
-  transition: color .25s ease-in-out; }
-
 /*---------General Styles---*/
 .relativePosition {
   position: relative; }
@@ -141,7 +123,7 @@ a {
 .hiddenContent {
   position: fixed;
   top: 0;
-  width: 0;
+  width: 100%;
   height: 100%;
   background: #353535;
   overflow-y: auto;
@@ -191,6 +173,237 @@ a {
   #hiddenContent:target + .page-wrap .main-header {
     width: 80%;
     left: 20%; }
+
+#sectionOne .audioVideoControls {
+  width: 100%;
+  height: 10%;
+  position: absolute;
+  left: 0;
+  bottom: 0;
+  background: rgba(62, 59, 59, 0.45);
+  display: -webkit-box;
+  display: -webkit-flex;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: horizontal;
+  -webkit-box-direction: normal;
+  -webkit-flex-direction: row;
+      -ms-flex-direction: row;
+          flex-direction: row; }
+  #sectionOne .audioVideoControls .fa-play:hover:before {
+    color: #fff; }
+  #sectionOne .audioVideoControls .fa-play:before {
+    font-size: 2em;
+    color: #FFA500;
+    cursor: pointer;
+    -webkit-transition: color .25s ease-in-out;
+    transition: color .25s ease-in-out; }
+  #sectionOne .audioVideoControls .fa-pause:before {
+    font-size: 2em;
+    color: #FFA500;
+    cursor: pointer;
+    -webkit-transition: color .25s ease-in-out;
+    transition: color .25s ease-in-out; }
+  #sectionOne .audioVideoControls .fa-pause:hover:before {
+    color: #fff; }
+  #sectionOne .audioVideoControls .fa-stop:before {
+    font-size: 2em;
+    color: #FFA500;
+    cursor: pointer;
+    -webkit-transition: color .25s ease-in-out;
+    transition: color .25s ease-in-out; }
+  #sectionOne .audioVideoControls .fa-stop:hover:before {
+    color: #fff; }
+#sectionOne .audioVideoControls > div {
+  margin: 2%; }
+#sectionOne .audioVideoControls p {
+  color: #ffffff;
+  padding: 1em;
+  background: rgba(0, 0, 0, 0.5); }
+#sectionOne .progressbarContainer {
+  background-color: #e0e0e0;
+  height: 7px;
+  width: 256px;
+  border-radius: 2px; }
+#sectionOne .audioVideoBar {
+  -webkit-appearance: none;
+  -moz-appearance: none;
+       appearance: none;
+  background-color: #1384bb;
+  height: 7px;
+  width: 0; }
+#sectionOne .audioVideoMenuButton {
+  width: 7%;
+  position: absolute;
+  left: 50%;
+  cursor: pointer;
+  bottom: -3%;
+  z-index: 10; }
+
+#sectionTwo {
+  position: relative;
+  z-index: 200; }
+  #sectionTwo .sectionTwoAnimations {
+    position: relative;
+    height: 100vh;
+    width: 100%; }
+    #sectionTwo .sectionTwoAnimations h2 {
+      font-family: josefinRegular, Arial, Helvetica, sans-serf;
+      color: #555;
+      width: 100%;
+      height: auto;
+      display: block;
+      font-size: 6em;
+      opacity: 0;
+      -webkit-transform: translateX(2000px);
+          -ms-transform: translateX(2000px);
+              transform: translateX(2000px); }
+    #sectionTwo .sectionTwoAnimations :nth-child(1) {
+      position: relative;
+      height: 50vh; }
+    #sectionTwo .sectionTwoAnimations :nth-child(1) div:nth-child(3) {
+      position: absolute;
+      left: 45%;
+      top: 45%;
+      z-index: 230; }
+    #sectionTwo .sectionTwoAnimations .homePageTwoHexTriangle {
+      width: 100%;
+      height: auto;
+      display: block; }
+    #sectionTwo .sectionTwoAnimations :nth-child(1) div:nth-child(2) {
+      position: absolute;
+      top: 44%;
+      left: 32%;
+      z-index: 220; }
+    #sectionTwo .sectionTwoAnimations .homePageTwoTitleBullet {
+      width: 100%;
+      height: auto;
+      display: block; }
+    #sectionTwo .sectionTwoAnimations :nth-child(1) div:nth-child(1) {
+      z-index: 210;
+      position: absolute;
+      top: 20%;
+      left: 5%; }
+    #sectionTwo .sectionTwoAnimations .homePageAnimationSectionTwo {
+      position: relative;
+      float: left;
+      margin: -5% 0 0 35%;
+      width: 100%;
+      height: 400px; }
+    #sectionTwo .sectionTwoAnimations .homePageTwoBulletLines {
+      width: 100%;
+      height: auto;
+      display: block; }
+    #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(1) {
+      position: absolute;
+      z-index: 240;
+      height: auto; }
+    #sectionTwo .sectionTwoAnimations .homePageTwoSmallHeaderHexOne {
+      width: 100%;
+      height: auto;
+      display: block; }
+    #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(2) {
+      position: absolute;
+      display: block;
+      z-index: 250;
+      height: auto;
+      top: -30px;
+      left: 60px; }
+    #sectionTwo .sectionTwoAnimations .homePageTwoSmallHeaderHexTwo {
+      width: 100%;
+      height: auto;
+      display: block; }
+    #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(3) {
+      position: absolute;
+      top: 145px;
+      left: 60px;
+      z-index: 260;
+      height: auto; }
+    #sectionTwo .sectionTwoAnimations .homePageTwoSmallHeaderHexThree {
+      width: 100%;
+      height: auto;
+      display: block; }
+    #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(4) {
+      position: absolute;
+      top: 320px;
+      left: 60px;
+      z-index: 270;
+      height: auto; }
+    #sectionTwo .sectionTwoAnimations h3 {
+      font-size: 3em;
+      font-family: josefinRegular, Arial, Helvetica, sans-serf;
+      color: #555; }
+    #sectionTwo .sectionTwoAnimations .homePageTwoH3One {
+      height: auto;
+      width: 100%; }
+    #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(5) {
+      position: absolute;
+      z-index: 280;
+      height: auto;
+      left: 150px;
+      top: -15px; }
+    #sectionTwo .sectionTwoAnimations .homePageTwoH3Two {
+      height: auto;
+      width: 100%; }
+    #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(6) {
+      position: absolute;
+      z-index: 290;
+      width: 100%;
+      height: auto;
+      top: 163px;
+      left: 150px; }
+    #sectionTwo .sectionTwoAnimations .homePageTwoH3Three {
+      height: auto;
+      width: 100%; }
+    #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(7) {
+      position: absolute;
+      z-index: 300;
+      width: 100%;
+      height: auto;
+      top: 340px;
+      left: 150px; }
+
+#sectionThree {
+  position: relative; }
+  #sectionThree .homePageThreeImgsDiv {
+    min-width: 100%;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
+        -ms-flex-direction: column;
+            flex-direction: column; }
+  #sectionThree h2 {
+    color: #fff; }
+  #sectionThree .displayFlexImgs {
+    display: -webkit-box;
+    display: -webkit-flex;
+    display: -ms-flexbox;
+    display: flex;
+    -webkit-justify-content: space-around;
+        -ms-flex-pack: distribute;
+            justify-content: space-around;
+    margin: 2% auto; }
+    #sectionThree .displayFlexImgs img {
+      max-width: 100%;
+      height: auto; }
+  #sectionThree .homePageFeaturedOne {
+    margin: 0 auto;
+    width: 100%;
+    -webkit-transform: translateX(-2000px);
+        -ms-transform: translateX(-2000px);
+            transform: translateX(-2000px); }
+  #sectionThree .homePageFeaturedTwo {
+    margin: 0 auto;
+    width: 100%;
+    -webkit-transform: translateY(-3000px);
+        -ms-transform: translateY(-3000px);
+            transform: translateY(-3000px); }
+  #sectionThree .homePageFeaturedThree {
+    margin: 0 auto;
+    width: 100%;
+    -webkit-transform: translateX(-2000px);
+        -ms-transform: translateX(-2000px);
+            transform: translateX(-2000px); }
 
 /*-------button flipper styles----*/
 /* entire container, keeps perspective */
@@ -247,227 +460,3 @@ a {
     font-size: 2em;
     margin: 2% auto;
     text-align: center; }
-  .homePageVisibleContent #sectionOne .audioVideoControls {
-    width: 100%;
-    height: 10%;
-    position: absolute;
-    left: 0;
-    bottom: 0;
-    background: rgba(62, 59, 59, 0.45);
-    display: -webkit-box;
-    display: -webkit-flex;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: horizontal;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: row;
-        -ms-flex-direction: row;
-            flex-direction: row; }
-  .homePageVisibleContent #sectionOne .audioVideoControls > div {
-    margin: 2%; }
-  .homePageVisibleContent #sectionOne .audioVideoControls p {
-    color: #ffffff;
-    padding: 1em;
-    background: rgba(0, 0, 0, 0.5); }
-  .homePageVisibleContent #sectionOne .progressbarContainer {
-    background-color: #e0e0e0;
-    height: 7px;
-    width: 256px;
-    border-radius: 2px; }
-  .homePageVisibleContent #sectionOne .audioVideoBar {
-    -webkit-appearance: none;
-    -moz-appearance: none;
-         appearance: none;
-    background-color: #1384bb;
-    height: 7px;
-    width: 0; }
-  .homePageVisibleContent #sectionOne .audioVideoMenuButton {
-    width: 7%;
-    position: absolute;
-    left: 50%;
-    cursor: pointer;
-    bottom: -3%;
-    z-index: 10; }
-  .homePageVisibleContent #sectionTwo {
-    position: relative;
-    z-index: 200; }
-    .homePageVisibleContent #sectionTwo .sectionTwoAnimations {
-      position: relative;
-      height: 100vh;
-      width: 100%; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations h2 {
-        font-family: josefinRegular, Arial, Helvetica, sans-serf;
-        color: #555;
-        width: 100%;
-        height: auto;
-        display: block;
-        font-size: 6em;
-        opacity: 0;
-        -webkit-transform: translateX(2000px);
-            -ms-transform: translateX(2000px);
-                transform: translateX(2000px); }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(1) {
-        position: relative;
-        height: 50vh; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(1) div:nth-child(3) {
-        position: absolute;
-        left: 45%;
-        top: 45%;
-        z-index: 230; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageTwoHexTriangle {
-        width: 100%;
-        height: auto;
-        display: block; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(1) div:nth-child(2) {
-        position: absolute;
-        top: 44%;
-        left: 32%;
-        z-index: 220; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageTwoTitleBullet {
-        width: 100%;
-        height: auto;
-        display: block; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(1) div:nth-child(1) {
-        z-index: 210;
-        position: absolute;
-        top: 20%;
-        left: 5%; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageAnimationSectionTwo {
-        position: relative;
-        float: left;
-        margin: -5% 0 0 35%;
-        width: 100%;
-        height: 400px; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageTwoBulletLines {
-        width: 100%;
-        height: auto;
-        display: block; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(1) {
-        position: absolute;
-        z-index: 240;
-        height: auto; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageTwoSmallHeaderHexOne {
-        width: 100%;
-        height: auto;
-        display: block; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(2) {
-        position: absolute;
-        display: block;
-        z-index: 250;
-        height: auto;
-        top: -30px;
-        left: 60px; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageTwoSmallHeaderHexTwo {
-        width: 100%;
-        height: auto;
-        display: block; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(3) {
-        position: absolute;
-        top: 145px;
-        left: 60px;
-        z-index: 260;
-        height: auto; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageTwoSmallHeaderHexThree {
-        width: 100%;
-        height: auto;
-        display: block; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(4) {
-        position: absolute;
-        top: 320px;
-        left: 60px;
-        z-index: 270;
-        height: auto; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations h3 {
-        font-size: 3em;
-        font-family: josefinRegular, Arial, Helvetica, sans-serf;
-        color: #555; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageTwoH3One {
-        height: auto;
-        width: 100%; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(5) {
-        position: absolute;
-        z-index: 280;
-        height: auto;
-        left: 150px;
-        top: -15px; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageTwoH3Two {
-        height: auto;
-        width: 100%; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(6) {
-        position: absolute;
-        z-index: 290;
-        width: 100%;
-        height: auto;
-        top: 163px;
-        left: 150px; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations .homePageTwoH3Three {
-        height: auto;
-        width: 100%; }
-      .homePageVisibleContent #sectionTwo .sectionTwoAnimations :nth-child(3) div:nth-child(7) {
-        position: absolute;
-        z-index: 300;
-        width: 100%;
-        height: auto;
-        top: 340px;
-        left: 150px; }
-  .homePageVisibleContent #sectionThree {
-    position: relative; }
-    .homePageVisibleContent #sectionThree .homePageThreeImgsDiv {
-      min-width: 100%;
-      -webkit-box-orient: vertical;
-      -webkit-box-direction: normal;
-      -webkit-flex-direction: column;
-          -ms-flex-direction: column;
-              flex-direction: column; }
-    .homePageVisibleContent #sectionThree h2 {
-      color: #fff; }
-    .homePageVisibleContent #sectionThree .displayFlexImgs {
-      display: -webkit-box;
-      display: -webkit-flex;
-      display: -ms-flexbox;
-      display: flex;
-      -webkit-justify-content: space-around;
-          -ms-flex-pack: distribute;
-              justify-content: space-around;
-      margin: 2% auto; }
-      .homePageVisibleContent #sectionThree .displayFlexImgs img {
-        max-width: 100%;
-        height: auto; }
-    .homePageVisibleContent #sectionThree .homePageFeaturedOne {
-      margin: 0 auto;
-      width: 100%;
-      -webkit-transform: translateX(-2000px);
-          -ms-transform: translateX(-2000px);
-              transform: translateX(-2000px); }
-    .homePageVisibleContent #sectionThree .homePageFeaturedTwo {
-      margin: 0 auto;
-      width: 100%;
-      -webkit-transform: translateY(-3000px);
-          -ms-transform: translateY(-3000px);
-              transform: translateY(-3000px); }
-    .homePageVisibleContent #sectionThree .homePageFeaturedThree {
-      margin: 0 auto;
-      width: 100%;
-      -webkit-transform: translateX(-2000px);
-          -ms-transform: translateX(-2000px);
-              transform: translateX(-2000px); }
-  .homePageVisibleContent #sectionFour .flexParent {
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-flex-wrap: wrap;
-        -ms-flex-wrap: wrap;
-            flex-wrap: wrap;
-    width: 100%; }
-    .homePageVisibleContent #sectionFour .flexParent div.displayFlex {
-      -webkit-justify-content: space-around;
-          -ms-flex-pack: distribute;
-              justify-content: space-around;
-      margin: .5em; }
-      .homePageVisibleContent #sectionFour .flexParent div.displayFlex .homePageFourImg img {
-        width: 95%;
-        height: auto;
-        display: block;
-        margin: 2%; }
