--- a/_/components/sass/sectionTwo.scss
+++ b/_/components/sass/sectionTwo.scss
@@ -44,154 +44,154 @@ $font-stack: josefinRegular, Arial, Helvetica, sans-serf;
         color: #555555;
       }
     }
-    :nth-child(1) div:nth-child(3) {
-      position: absolute;
-      left: 45%;
-      top: 27%;
-      z-index: 230;
-      h2 {
-        font-family: $font-stack;
-        color: #555;
-        width: 100%;
-        height: auto;
-        display: block;
-        font-size: 6em;
-        //opacity: 0;
-        transform: translateX(0px);
-      }
-    }
-    :nth-child(1) div:nth-child(1) {
-      z-index: 210;
-      position: absolute;
-      top: 15%;
-      left: 5%;
-      .homePageTwoHexTriangle {
-        width: 100%;
-        height: auto;
-        display: block;
-      }
-    }
-
-    :nth-child(1) div:nth-child(2) {
-      position: absolute;
-      top: 26%;
-      left: 32%;
-      z-index: 220;
-      .homePageTwoTitleBullet {
-        width: 100%;
-        height: auto;
-        display: block;
-      }
-    }
-    // THis is the bottom half of the page
-    .homePageAnimationSectionTwo {
-      position: relative;
-      float: left;
-      //margin: -5% 0 0 35%;
-      width: 50%;
-      height: 400px;
-      margin: 25% 0 0 30%;
-      .homePageAnimationSectionTwoInner {
-
-        :nth-child(1) {
-
-        }
-      }
-    }
-
-    .homePageTwoBulletLines {
-      width: 100%;
-      height: auto;
-      //background: url('../_/assets/testBullets.png');
-      display: block;
-
-    }
-    :nth-child(3) div:nth-child(1) {
-      position: absolute;
-      z-index: 240;
-      height: auto;
-    }
-
-    :nth-child(3) div:nth-child(2) {
-      position: absolute;
-      display: block;
-      z-index: 250;
-      height: auto;
-      top: 25px;
-      left: 100px;
-      .homePageTwoSmallHeaderHexOne {
-        width: 100%;
-        height: auto;
-        display: block;
-      }
-    }
-    .homePageTwoSmallHeaderHexTwo {
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    :nth-child(3) div:nth-child(3) {
-      position: absolute;
-      top: 145px;
-      left: 60px;
-      z-index: 260;
-      height: auto;
-    }
-    .homePageTwoSmallHeaderHexThree{
-      width: 100%;
-      height: auto;
-      display: block;
-    }
-    :nth-child(3) div:nth-child(4) {
-      position: absolute;
-      top: 320px;
-      left: 60px;
-      z-index: 270;
-      height: auto;
-    }
-    h3 {
-      font-size: 3em;
-      font-family: $font-stack;
-      color: #555;
-    }
-    .homePageTwoSubTitles {
-
-    }
-    .homePageTwoH3One {
-      height: auto;
-      width: 100%;
-    }
-    :nth-child(3) div:nth-child(5) {
-      position: absolute;
-      z-index: 280;
-      height: auto;
-      left: 150px;
-      top: -15px;
-    }
-    .homePageTwoH3Two {
-      height: auto;
-      width: 100%;
-    }
-    :nth-child(3) div:nth-child(6) {
-      position: absolute;
-      z-index: 290;
-      width: 100%;
-      height: auto;
-      top: 163px;
-      left: 150px;
-    }
-    .homePageTwoH3Three {
-      height: auto;
-      width: 100%;
-    }
-    :nth-child(3) div:nth-child(7) {
-      position: absolute;
-      z-index: 300;
-      width: 100%;
-      height: auto;
-      top: 340px;
-      left: 150px;
-    }
+    //:nth-child(1) div:nth-child(3) {
+    //  position: absolute;
+    //  left: 45%;
+    //  top: 27%;
+    //  z-index: 230;
+    //  h2 {
+    //    font-family: $font-stack;
+    //    color: #555;
+    //    width: 100%;
+    //    height: auto;
+    //    display: block;
+    //    font-size: 6em;
+    //    //opacity: 0;
+    //    transform: translateX(0px);
+    //  }
+    //}
+    //:nth-child(1) div:nth-child(1) {
+    //  z-index: 210;
+    //  position: absolute;
+    //  top: 15%;
+    //  left: 5%;
+    //  .homePageTwoHexTriangle {
+    //    width: 100%;
+    //    height: auto;
+    //    display: block;
+    //  }
+    //}
+    //
+    //:nth-child(1) div:nth-child(2) {
+    //  position: absolute;
+    //  top: 26%;
+    //  left: 32%;
+    //  z-index: 220;
+    //  .homePageTwoTitleBullet {
+    //    width: 100%;
+    //    height: auto;
+    //    display: block;
+    //  }
+    //}
+    //// THis is the bottom half of the page
+    //.homePageAnimationSectionTwo {
+    //  position: relative;
+    //  float: left;
+    //  //margin: -5% 0 0 35%;
+    //  width: 50%;
+    //  height: 400px;
+    //  margin: 25% 0 0 30%;
+    //  .homePageAnimationSectionTwoInner {
+    //
+    //    :nth-child(1) {
+    //
+    //    }
+    //  }
+    //}
+    //
+    //.homePageTwoBulletLines {
+    //  width: 100%;
+    //  height: auto;
+    //  //background: url('../_/assets/testBullets.png');
+    //  display: block;
+    //
+    //}
+    //:nth-child(3) div:nth-child(1) {
+    //  position: absolute;
+    //  z-index: 240;
+    //  height: auto;
+    //}
+    //
+    //:nth-child(3) div:nth-child(2) {
+    //  position: absolute;
+    //  display: block;
+    //  z-index: 250;
+    //  height: auto;
+    //  top: 25px;
+    //  left: 100px;
+    //  .homePageTwoSmallHeaderHexOne {
+    //    width: 100%;
+    //    height: auto;
+    //    display: block;
+    //  }
+    //}
+    //.homePageTwoSmallHeaderHexTwo {
+    //  width: 100%;
+    //  height: auto;
+    //  display: block;
+    //}
+    //:nth-child(3) div:nth-child(3) {
+    //  position: absolute;
+    //  top: 145px;
+    //  left: 60px;
+    //  z-index: 260;
+    //  height: auto;
+    //}
+    //.homePageTwoSmallHeaderHexThree{
+    //  width: 100%;
+    //  height: auto;
+    //  display: block;
+    //}
+    //:nth-child(3) div:nth-child(4) {
+    //  position: absolute;
+    //  top: 320px;
+    //  left: 60px;
+    //  z-index: 270;
+    //  height: auto;
+    //}
+    //h3 {
+    //  font-size: 3em;
+    //  font-family: $font-stack;
+    //  color: #555;
+    //}
+    //.homePageTwoSubTitles {
+    //
+    //}
+    //.homePageTwoH3One {
+    //  height: auto;
+    //  width: 100%;
+    //}
+    //:nth-child(3) div:nth-child(5) {
+    //  position: absolute;
+    //  z-index: 280;
+    //  height: auto;
+    //  left: 150px;
+    //  top: -15px;
+    //}
+    //.homePageTwoH3Two {
+    //  height: auto;
+    //  width: 100%;
+    //}
+    //:nth-child(3) div:nth-child(6) {
+    //  position: absolute;
+    //  z-index: 290;
+    //  width: 100%;
+    //  height: auto;
+    //  top: 163px;
+    //  left: 150px;
+    //}
+    //.homePageTwoH3Three {
+    //  height: auto;
+    //  width: 100%;
+    //}
+    //:nth-child(3) div:nth-child(7) {
+    //  position: absolute;
+    //  z-index: 300;
+    //  width: 100%;
+    //  height: auto;
+    //  top: 340px;
+    //  left: 150px;
+    //}
 
   } // end sectionTwoAnimations
 } // end #sectionTwo
